--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "stormbreaker-cli",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "nodemon ./src/index.ts",
