--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "stormbreaker-cli",
-  "version": "1.0.3",
+  "version": "1.0.6",
   "description": "",
-  "main": "./src/index.ts",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "nodemon ./src/index.ts",
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
     "url": "https://github.com/dandres10/stormbreaker/issues"
   },
   "bin": {
-    "cli-stormbreaker-generator": "ts-node ./src/index.ts"
+    "cli-stormbreaker-generator": "./dist/index.js"
   },
   "homepage": "https://github.com/dandres10/stormbreaker#readme",
   "dependencies": {
