--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "homepage": "https://github.com/dandres10/stormbreaker#readme",
   "dependencies": {
+    "@types/figlet": "^1.5.6",
     "chalk": "^4.1.2",
+    "dotenv": "^16.1.4",
     "ejs": "^3.1.8",
+    "figlet": "^1.6.0",
     "inquirer": "^8.0.0",
     "shelljs": "^0.8.5",
     "ts-node": "^10.9.1",
